[package]
name = "week-edu-starter"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
#tokio-util = "0.7"
solana-sdk = "2"
solana-transaction-status = "2"
solana-client = "2"
spl-associated-token-account = "6"
spl-token = "6"
yellowstone-grpc-client = { version = "6"}
yellowstone-grpc-proto = { version = "6"}
async-trait = "0.1"
env_logger = "0.11.5"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1.0.93"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
bincode = "1.3"
base64 = "0.12.3"
futures = "0.3.31"
thiserror = { version = "1.0.69", features = [] }
borsh = "1.5.1"
